# paper

./: .gitignore  .gitmodules  Cargo.toml  README.md  TODO.md
.claude/: settings.local.json
.github/workflows/: ci.yaml  pages.yaml  release.yaml
.serena/: project.yml
api/: Cargo.toml
api/src/: cli.rs  exit_codes.rs
api/src/commands/: paper.rs
crates/paper/: Cargo.toml
crates/paper-core/: Cargo.toml
crates/paper-core/src/: config.rs  error.rs  lib.rs  models.rs
crates/paper-core/src/aggregation/: dedup.rs  merge.rs  mod.rs  ranking.rs
crates/paper-core/src/ports/: download_service.rs  mod.rs  provider.rs  search_service.rs
crates/paper-core/src/providers/: arxiv.rs  downloader.rs  mod.rs  openalex.rs  resilient.rs
crates/paper-core/src/resilience/: circuit_breaker.rs  config.rs  rate_limiter.rs  retry.rs
crates/paper-core/src/services/: download.rs  search.rs
crates/paper-fetch/: Cargo.toml
crates/paper-fetch-core/: Cargo.toml
crates/paper-fetch-core/src/: config.rs  lib.rs
crates/paper-fetch-core/src/ports/: download_service.rs  search_service.rs
crates/paper-fetch-core/src/providers/: arxiv.rs  downloader.rs  mod.rs
crates/paper-fetch-core/src/resilience/: config.rs  mod.rs  rate_limiter.rs
crates/paper-fetch-core/src/services/: download.rs
crates/paper-fetch/src/: cli.rs  exit_codes.rs  main.rs  output.rs
crates/paper-fetch/src/commands/: config.rs  paper.rs
crates/paper/src/: cli.rs  exit_codes.rs  main.rs  output.rs
crates/paper/src/commands/: config.rs  paper.rs
docs/: install.ps1  install.sh
paper-fetch-core/: Cargo.toml
paper-fetch-core/src/: config.rs  error.rs  lib.rs  models.rs
paper-fetch-core/src/ports/: provider.rs
paper-fetch-core/src/providers/: arxiv.rs  downloader.rs
paper-fetch-core/src/resilience/: circuit_breaker.rs  config.rs  rate_limiter.rs  retry.rs
slop/: 02-session-journal.md  2026-03-05-designing-good-clis.md  2026-03-08-style-guide-compliance-plan.md  architecture.md  walkthrough-research-hub-reimplementation.md
slop/dev_journal/: 2026-03-09-search-quality-date-filter.md
slop/journal/: 01.md  02-session-journal.md
slop/research/: 2026-03-08-cli-ux.md  2026-03-09-metasearch-ux-design.md  2026-03-09-open-alex-api.md
slop/walkthroughs/: 03-next-session.md  2026-03-03-complete-arxiv-provider.md  2026-03-08-01-rename-paper-fetch-to-paper.md  2026-03-08-02-ci-cd-workflows.md  2026-03-08-03-package-manager-distribution.md  2026-03-10-resilient-provider.md  home-still-architecture.md  walkthrough-arxiv-provider.md
