[workspace]
members = ["crates/*", "hs-style"]
resolver = "2"


[workspace.dependencies]
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
hs-style = { path = "hs-style" }
owo-colors = { version = "4.3", features = ["supports-colors"] }
serde_yaml_ng = "0.10"
figment = { version = "0.10", features = ["yaml", "env"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
