[package]
name = "paper-fetch-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.143"
chrono = { version = "0.4.42", features = ["serde"] }
thiserror = "2.0.17"
reqwest = { version = "0.12.23", features = ["json", "stream"] }
async-trait = { version = "0.1.89" }
tokio = { version = "1.48.0", features = ["full"] }
