[package]
name = "paper-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true, features = ["stream"] }
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
async-trait = "0.1"
governor = "0.10"
failsafe = "1.3"
backon = "1.3"
roxmltree = "0.20"
url = "2"
serde_yaml_ng = "0.10"
sha2 = "0.10"
futures = "0.3"
figment = { workspace = true }
strsim = "0.11"
