[package]
name = "paper-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "paper"
path = "src/main.rs"

[dependencies]
paper-core = { path = "../paper-core" }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
owo-colors = { workspace = true }
hs-style = { workspace = true, features = ["cli"] }
serde_yaml_ng = { workspace = true }


[dev-dependencies]
assert_cmd = "2"
predicates = "3"
